pkgs/lualike_ffi/lib/src/lualike_ffi_bindings.g.dart

// Copyright (c) 2026, the lualike authors.
// Use of this source code is governed by the MIT license in the LICENSE file.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:lualike_ffi/src/lualike_ffi_bindings.g.dart')
library;

import 'dart:ffi' as ffi;

@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
  )
>()
external ffi.Pointer<ffi.Void> lualike_ffi_open(
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<ffi.Char> error,
  int error_capacity,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void lualike_ffi_close(ffi.Pointer<ffi.Void> library);

@ffi.Native<
  ffi.Pointer<ffi.Void> Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
  )
>()
external ffi.Pointer<ffi.Void> lualike_ffi_symbol(
  ffi.Pointer<ffi.Void> library,
  ffi.Pointer<ffi.Char> name,
  ffi.Pointer<ffi.Char> error,
  int error_capacity,
);

@ffi.Native<
  ffi.Int32 Function(
    ffi.Pointer<ffi.Void>,
    ffi.Int32,
    ffi.Pointer<ffi.Int32>,
    ffi.Size,
    ffi.Pointer<lualike_ffi_value>,
    ffi.Pointer<lualike_ffi_value>,
    ffi.Pointer<ffi.Char>,
    ffi.Size,
  )
>()
external int lualike_ffi_call(
  ffi.Pointer<ffi.Void> symbol,
  int result_type,
  ffi.Pointer<ffi.Int32> argument_types,
  int argument_count,
  ffi.Pointer<lualike_ffi_value> arguments,
  ffi.Pointer<lualike_ffi_value> result,
  ffi.Pointer<ffi.Char> error,
  int error_capacity,
);

final class lualike_ffi_value extends ffi.Union {
  @ffi.Int8()
  external int i8;

  @ffi.Uint8()
  external int u8;

  @ffi.Int16()
  external int i16;

  @ffi.Uint16()
  external int u16;

  @ffi.Int32()
  external int i32;

  @ffi.Uint32()
  external int u32;

  @ffi.Int64()
  external int i64;

  @ffi.Uint64()
  external int u64;

  @ffi.Float()
  external double f32;

  @ffi.Double()
  external double f64;

  external ffi.Pointer<ffi.Void> pointer;
}
